initial circle lights done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
-  <h1>Christmas Lights</h1>
+  <div class="wrapper">
+    <h1>Christmas Lights</h1>
+    <ul class="row">
+      <li class="circle-light red"></li>
+      <li class="circle-light yellow"></li>
+      <li class="circle-light blue"></li>
+      <li class="circle-light green"></li>
+      <li class="circle-light red"></li>
+      <li class="circle-light yellow"></li>
+      <li class="circle-light blue"></li>
+    </ul>
+  </div>
+
   <script src="./js/main.js"></script>
 </body>
 
