create a start and stop buttons

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       <li class="circle-light yellow"></li>
       <li class="circle-light blue"></li>
     </ul>
+    <div class="control-panel">
+      <button class="btn start">On</button>
+      <button class="btn stop">Off</button>
+    </div>
   </div>
 
   <script src="./js/main.js"></script>
